--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "cirrus-ui": "^0.8.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
