--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "bulma": "^1.0.4",
     "cirrus-ui": "^0.8.0",
+    "install": "^0.13.0",
+    "npm": "^11.4.2",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
