front. вывод вуджей

--- a/front/package.json
+++ b/front/package.json
@@ -14,8 +14,10 @@
     "bulma": "^1.0.4",
     "cirrus-ui": "^0.8.0",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "npm": "^11.4.2",
     "pinia": "^3.0.1",
+    "swiper": "^11.2.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
