--- a/front/package.json
+++ b/front/package.json
@@ -10,9 +10,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tiptap/extension-color": "^2.22.3",
+    "@tiptap/extension-list-item": "^2.22.3",
+    "@tiptap/extension-text-style": "^2.22.3",
+    "@tiptap/extension-underline": "^2.22.3",
+    "@tiptap/starter-kit": "^2.22.3",
+    "@tiptap/vue-3": "^2.22.3",
     "axios": "^1.10.0",
     "bulma": "^1.0.4",
-    "cirrus-ui": "^0.8.0",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "npm": "^11.4.2",
