front. редактирование вуджа - начало

--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tiptap/extension-color": "^2.22.3",
     "@tiptap/extension-list-item": "^2.22.3",
+    "@tiptap/extension-placeholder": "^2.22.3",
     "@tiptap/extension-text-style": "^2.22.3",
     "@tiptap/extension-underline": "^2.22.3",
     "@tiptap/starter-kit": "^2.22.3",
