--- a/front/package.json
+++ b/front/package.json
@@ -26,7 +26,8 @@
     "pinia": "^3.0.1",
     "swiper": "^11.2.8",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-perfect-scrollbar": "^2.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
