--- a/.docker/api/nginx/default.conf
+++ b/.docker/api/nginx/default.conf
@@ -5,6 +5,10 @@ server {
 
   client_max_body_size 100M; # 413 Request Entity Too Large
 
+  location /avatar/ {
+    root /var/www/storage/app/public;
+  }
+
   location / {
     # root /var/www/public;
     # index index.php;
