--- a/api/.env.example
+++ b/api/.env.example
@@ -1,10 +1,9 @@
-COMPOSE_PROJECT_NAME=app_notes
-
-APP_NAME=notes
+APP_NAME=WOOJ
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:7070
+APP_FRONT_URL=http://localhost:7071
 
 APP_LOCALE=ru
 APP_FALLBACK_LOCALE=ru
@@ -25,7 +24,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=db
 DB_PORT=5432
-DB_DATABASE=notes
+DB_DATABASE=wooj
 DB_USERNAME=admin
 DB_PASSWORD=admin
 
@@ -55,7 +54,7 @@ MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="support@wooj.ru"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -63,5 +62,3 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
-
-VITE_APP_NAME="${APP_NAME}"
