--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,52 +1,52 @@
 services:
-    db:
-        build: .docker/db
-        ports:
-            - 5002:5432
-        volumes:
-            - .docker/db/data:/var/lib/postgresql/data
-        environment:
-            POSTGRES_USER: admin
-            POSTGRES_PASSWORD: admin
-            POSTGRES_DB: notes
+  db:
+    build: .docker/db
+    ports:
+      - 5002:5432
+    volumes:
+      - .docker/db/data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASS}
+      POSTGRES_DB: ${DB_NAME}
 
-    api:
-        build: .docker/api
-        ports:
-            - 7070:80
-        volumes:
-            - ./api:/var/www
-            - .docker/api/php/php.ini:/usr/local/etc/php/php.ini
-            - .docker/api/php/docker.conf:/usr/local/etc/php-fpm.d/docker.conf
-            - .docker/api/nginx/default.conf:/etc/nginx/conf.d/default.conf
-            - .docker/api/nginx/nginx.conf:/etc/nginx/nginx.conf
-            - .docker/api/.bashrc:/root/.bashrc
-        depends_on:
-            - db
+  api:
+    build: .docker/api
+    ports:
+      - 7070:80
+    volumes:
+      - ./api:/var/www
+      - .docker/api/php/php.ini:/usr/local/etc/php/php.ini
+      - .docker/api/php/docker.conf:/usr/local/etc/php-fpm.d/docker.conf
+      - .docker/api/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - .docker/api/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - .docker/api/.bashrc:/root/.bashrc
+    depends_on:
+      - db
 
-    front:
-        build: .docker/front
-        ports:
-            - 7071:80
-            - 7072:5173
-        volumes:
-            - ./front:/var/www
-            - .docker/front/nginx/default.conf:/etc/nginx/conf.d/default.conf
-            - .docker/front/nginx/nginx.conf:/etc/nginx/nginx.conf
-            - .docker/front/.bashrc:/root/.bashrc
-        depends_on:
-            - api
+  front:
+    build: .docker/front
+    ports:
+      - 7071:80
+      - 7072:5173
+    volumes:
+      - ./front:/var/www
+      - .docker/front/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - .docker/front/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - .docker/front/.bashrc:/root/.bashrc
+    depends_on:
+      - api
 
-    # redis:
-    #     image: redis:latest
-    #     command: redis-server --appendonly yes
-    #     volumes:
-    #     - .docker/redis/data:/data
-    #     ports:
-    #     - 6379:6379
+  # redis:
+  #     image: redis:latest
+  #     command: redis-server --appendonly yes
+  #     volumes:
+  #     - .docker/redis/data:/data
+  #     ports:
+  #     - 6379:6379
 
-    # mail:
-    #     image: axllent/mailpit:latest
-    #     ports:
-    #     - 8025:8025
-    #     - 1025:1025
+  # mail:
+  #     image: axllent/mailpit:latest
+  #     ports:
+  #     - 8025:8025
+  #     - 1025:1025
