--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
 COMPOSE_PROJECT_NAME="wooj"
+
 DB_NAME="wooj"
 DB_USER="admin"
 DB_PASS="admin"
+
+API_PORT=7070
+
+FRONT_BUILD_PORT=7071
+FRONT_DEV_PORT=7072
