--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
   api:
     build: .docker/api
     ports:
-      - 7070:80
+      - ${API_PORT}:80
     volumes:
       - ./api:/var/www
       - .docker/api/php/php.ini:/usr/local/etc/php/php.ini
@@ -27,8 +27,8 @@ services:
   front:
     build: .docker/front
     ports:
-      - 7071:80
-      - 7072:5173
+      - ${FRONT_BUILD_PORT}:80
+      - ${FRONT_DEV_PORT}:5173
     volumes:
       - ./front:/var/www
       - .docker/front/nginx/default.conf:/etc/nginx/conf.d/default.conf
