--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 COMPOSE_PROJECT_NAME="wooj"
 
+DB_PORT=5002
 DB_NAME="wooj"
 DB_USER="admin"
 DB_PASS="admin"
@@ -8,3 +9,6 @@ API_PORT=7070
 
 FRONT_BUILD_PORT=7071
 FRONT_DEV_PORT=7072
+
+MAIL_INTERFACE_PORT=7073
+MAIL_PORT=25
