--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   db:
     build: .docker/db
     ports:
-      - 5002:5432
+      - ${DB_PORT}:5432
     volumes:
       - .docker/db/data:/var/lib/postgresql/data
     environment:
@@ -37,6 +37,12 @@ services:
     depends_on:
       - api
 
+  mail:
+    build: .docker/mail
+    ports:
+      - ${MAIL_INTERFACE_PORT}:80
+      - ${MAIL_PORT}:25
+
   # redis:
   #     image: redis:latest
   #     command: redis-server --appendonly yes
@@ -44,9 +50,3 @@ services:
   #     - .docker/redis/data:/data
   #     ports:
   #     - 6379:6379
-
-  # mail:
-  #     image: axllent/mailpit:latest
-  #     ports:
-  #     - 8025:8025
-  #     - 1025:1025
