front. выпилил bulma

--- a/front/package.json
+++ b/front/package.json
@@ -19,9 +19,9 @@
     "@tiptap/starter-kit": "^2.22.3",
     "@tiptap/vue-3": "^2.22.3",
     "axios": "^1.10.0",
-    "bulma": "^1.0.4",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
+    "normalize.css": "^8.0.1",
     "npm": "^11.4.2",
     "pinia": "^3.0.1",
     "swiper": "^11.2.8",
