--- a/front/package.json
+++ b/front/package.json
@@ -28,7 +28,8 @@
     "vue": "^3.5.13",
     "vue-advanced-cropper": "^2.8.9",
     "vue-router": "^4.5.0",
-    "vue3-perfect-scrollbar": "^2.0.0"
+    "vue3-perfect-scrollbar": "^2.0.0",
+    "vue3-touch-events": "^5.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
