--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "@tiptap/starter-kit": "^2.22.3",
     "@tiptap/vue-3": "^2.22.3",
     "axios": "^1.10.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
