--- a/front/package.json
+++ b/front/package.json
@@ -27,8 +27,7 @@
     "swiper": "^11.2.8",
     "vue": "^3.5.13",
     "vue-advanced-cropper": "^2.8.9",
-    "vue-router": "^4.5.0",
-    "vue3-perfect-scrollbar": "^2.0.0"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
