Обновлено имя проекта на "wooj" в файлах composer.json и package.json, изменена версия на 0.1.0. Обновлены изображения для мобильной версии и экрана.

--- a/front/package.json
+++ b/front/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "notes",
-  "version": "0.0.0",
+  "name": "wooj",
+  "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
