--- a/front/package.json
+++ b/front/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host 0.0.0.0",
-    "build": "vite build --mode production",
+    "build": "vue-tsc && vite build --mode production",
     "preview": "vite preview",
-    "format": "prettier --write src/"
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@shopify/draggable": "^1.1.4",
@@ -30,10 +30,15 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^24.5.2",
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vue/tsconfig": "^0.8.1",
     "prettier": "3.5.3",
     "sass": "^1.89.2",
+    "typescript": "^5.9.2",
     "vite": "^6.2.4",
-    "vite-plugin-vue-devtools": "^7.7.2"
+    "vite-plugin-vue-devtools": "^7.7.2",
+    "vue-tsc": "^3.1.0"
   }
 }
