--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -6,6 +6,7 @@
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "baseUrl": ".",
+    "types": ["node"],
     "paths": {
       "@/*": ["./src/*"],
       "@utils/*": ["./src/utils/*"],
@@ -20,7 +21,7 @@
       "@views/*": ["./src/views/*"],
       "@assets/*": ["./src/assets/*"],
       "@styles/*": ["./src/assets/styles/*"],
-      "@types/*": ["./src/types/*"]
+      "@types": ["./src/types/index.ts"]
     }
   }
 }
