common. Добавлен Makefile для управления Docker-контейнерами, создан Dockerfile для production API, добавлены конфигурации Nginx и PHP-FPM, а также скрипт entrypoint для настройки окружения и запуска приложения.

--- a/api/composer.json
+++ b/api/composer.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://getcomposer.org/schema.json",
-  "name": "wooj",
+  "name": "wooj/api",
   "type": "project",
   "description": "WOOJ",
   "keywords": [
