--- a/api/.env.example
+++ b/api/.env.example
@@ -1,16 +1,15 @@
 APP_NAME=WOOJ
 APP_ENV=local
-APP_KEY=
+APP_KEY=${APP_KEY}
 APP_DEBUG=true
-APP_URL=http://localhost:7070
-APP_FRONT_URL=http://localhost:7071
+APP_URL=${APP_URL}
+APP_FRONT_URL=${APP_FRONT_URL}
 
 APP_LOCALE=ru
 APP_FALLBACK_LOCALE=ru
 APP_FAKER_LOCALE=ru_RU
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -22,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=db
-DB_PORT=5432
-DB_DATABASE=wooj
-DB_USERNAME=admin
-DB_PASSWORD=admin
+DB_HOST=${DB_HOST}
+DB_PORT=${DB_PORT}
+DB_DATABASE=${DB_DATABASE}
+DB_USERNAME=${DB_USERNAME}
+DB_PASSWORD=${DB_PASSWORD}
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -39,26 +38,12 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
-# CACHE_PREFIX=
 
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="support@wooj.ru"
+MAIL_MAILER=${MAIL_MAILER}
+MAIL_SCHEME=${MAIL_SCHEME}
+MAIL_HOST=${MAIL_PORT}
+MAIL_PORT=${MAIL_PORT}
+MAIL_USERNAME=${MAIL_USERNAME}
+MAIL_PASSWORD=${MAIL_PASSWORD}
+MAIL_FROM_ADDRESS=${MAIL_FROM_ADDRESS}
 MAIL_FROM_NAME="${APP_NAME}"
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
