common. Изменены пользователи и группы в конфигурациях Nginx и PHP-FPM на www-data для соответствия стандартам безопасности.

--- a/.docker/api/php/php-fpm.prod.conf
+++ b/.docker/api/php/php-fpm.prod.conf
@@ -1,10 +1,10 @@
 [www]
-user = app
-group = app
+user = www-data
+group = www-data
 
 listen = 127.0.0.1:9000
-listen.owner = app
-listen.group = app
+listen.owner = www-data
+listen.group = www-data
 listen.mode = 0660
 
 pm = dynamic
