common. Обновлены конфигурации Docker и Makefile, изменены пути к файлам, добавлены новые переменные окружения, улучшены настройки Nginx и PHP-FPM, удалены устаревшие файлы и улучшена структура проекта.

--- a/api/.docker/prod/nginx/nginx.conf
+++ b/api/.docker/prod/nginx/nginx.conf
@@ -34,11 +34,12 @@ http {
         # Don't tell nginx version to the clients. Default is 'on'.
         server_tokens off;
 
-        # Specifies the maximum accepted body size of a client request, as
-        # indicated by the request header Content-Length. If the stated content
-        # length is greater than this size, then the client receives the HTTP
-        # error code 413. Set to 0 to disable. Default is '1m'.
-        client_max_body_size 1m;
+        # Настройки для загрузки файлов
+        client_body_temp_path /tmp/nginx_client_body;
+        client_max_body_size 20m;
+        client_body_buffer_size 128k;
+        client_body_timeout 60s;
+        client_header_timeout 60s;
 
         # Sendfile copies data between one FD and other from within the kernel,
         # which is more efficient than read() + write(). Default is off.
