--- a/api/.env.example
+++ b/api/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=WOOJ
-APP_ENV=local
+APP_ENV=${APP_ENV}
 APP_KEY=
 APP_DEBUG=${APP_DEBUG}
 APP_URL=${APP_URL}
@@ -46,4 +46,4 @@ MAIL_PORT=${MAIL_PORT}
 MAIL_USERNAME=${MAIL_USERNAME}
 MAIL_PASSWORD=${MAIL_PASSWORD}
 MAIL_FROM_ADDRESS=${MAIL_FROM_ADDRESS}
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_NAME="${MAIL_FROM_NAME}"
