--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
-COMPOSE_PROJECT_NAME="wooj"
+COMPOSE_PROJECT_NAME=wooj
 
+DB_HOST=db
 DB_PORT=5002
-DB_NAME="wooj"
-DB_USER="admin"
-DB_PASS="admin"
+DB_NAME=wooj
+DB_USER=wooj
+DB_PASS=wooj
 
 API_PORT=7070
-
-FRONT_BUILD_PORT=7071
-FRONT_DEV_PORT=7072
+FRONT_PORT=7071
 
 MAIL_INTERFACE_PORT=7073
 MAIL_PORT=25
