--- a/api/.docker/dev/nginx/default.conf
+++ b/api/.docker/dev/nginx/default.conf
@@ -1,34 +1,23 @@
 server {
-  listen 80;
-  index index.php;
-  root /var/www/public;
+    listen 80;
+    server_name localhost;
+    root /var/www/html/public;
 
-  client_max_body_size 100M; # 413 Request Entity Too Large
+    index index.php index.html;
 
-  location /avatar/ {
-    root /var/www/storage/app/public;
-  }
-
-  location / {
-    # root /var/www/public;
-    # index index.php;
-    try_files $uri $uri/ /index.php?$query_string;
-  }
-
-  location ~ \.php$ {
-    try_files $uri =404;
-    
-    fastcgi_split_path_info ^(.+\.php)(/.+)$;
-    fastcgi_pass localhost:9000;
-    fastcgi_read_timeout 3600;
-    fastcgi_index index.php;
-    include fastcgi_params;
-    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    fastcgi_param PATH_INFO $fastcgi_path_info;
-
-    send_timeout 3600;
-    proxy_connect_timeout 3600;
-    proxy_read_timeout    3600;
-    proxy_send_timeout    3600;
-  }
+    location /avatar/ {
+        root /var/www/html/storage/app/public;
+    }
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass 127.0.0.1:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
 }
