--- a/api/.docker/dev/php/php.ini
+++ b/api/.docker/dev/php/php.ini
@@ -1,7 +1,50 @@
-; Example
+; Production PHP Configuration
 
-; [Date]
-; date.timezone = "Asia/Tokyo"
+; Memory and execution
+memory_limit = 256M
+max_execution_time = 60
+max_input_time = 60
 
-; [mbstring]
-; mbstring.language = Japanese
+; File uploads
+upload_max_filesize = 100M
+post_max_size = 100M
+max_file_uploads = 20
+
+; Timezone
+date.timezone = UTC
+
+; Error reporting (production)
+display_errors = On
+display_startup_errors = On
+log_errors = On
+error_log = /var/log/php_errors.log
+error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
+
+; OPcache configuration
+opcache.enable = 1
+opcache.enable_cli = 0
+opcache.memory_consumption = 128
+opcache.interned_strings_buffer = 8
+opcache.max_accelerated_files = 4000
+opcache.revalidate_freq = 2
+opcache.fast_shutdown = 1
+opcache.validate_timestamps = 0
+opcache.save_comments = 0
+
+; Session configuration
+session.cookie_httponly = 1
+session.cookie_secure = 0
+session.use_strict_mode = 1
+session.cookie_samesite = "Lax"
+
+; Security
+expose_php = Off
+allow_url_fopen = Off
+allow_url_include = Off
+
+; Performance
+realpath_cache_size = 4096K
+realpath_cache_ttl = 600
+
+; Logging
+log_errors_max_len = 1024
