--- a/api/.env.example
+++ b/api/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=WOOJ
 APP_ENV=${APP_ENV}
-APP_KEY=
+APP_KEY=base64:1URwEnt6uLLchKZZ2UFtboHsxRBXolsW6Ru+E77IF9U=
 APP_DEBUG=${APP_DEBUG}
 APP_URL=${APP_URL}
 APP_FRONT_URL=${APP_FRONT_URL}
