common. Обновлен Dockerfile для копирования .env.example вместо .env

--- a/api/.docker/test/Dockerfile
+++ b/api/.docker/test/Dockerfile
@@ -3,7 +3,7 @@ FROM php:8.4-fpm-alpine
 WORKDIR /test
 
 COPY ./tests/other .
-COPY ./.env .
+COPY ./.env.example ./.env
 COPY .docker/test/entrypoint.sh /usr/local/bin/entrypoint.sh
 # COPY .docker/test/php/php-fpm.conf /usr/local/etc/php-fpm.d/www.conf
 
