Обновлен скрипт entrypoint.sh для упрощения создания .env из .env.example и улучшена обработка переменных окружения. Добавлены отладочные переменные в index.php для вывода конфигурации окружения.

--- a/api/.docker/prod/nginx/default.conf
+++ b/api/.docker/prod/nginx/default.conf
@@ -1,6 +1,7 @@
 server {
-    listen ${HTTP_PORT};
-    server_name localhost;
+    listen $HTTP_PORT default_server;
+    listen [::]:$HTTP_PORT default_server;
+
     root /var/www/html/public;
 
     index index.php index.html;
