--- a/api/.docker/prod/nginx/default.conf
+++ b/api/.docker/prod/nginx/default.conf
@@ -1,6 +1,9 @@
 server {
-    listen $HTTP_PORT default_server;
-    listen [::]:$HTTP_PORT default_server;
+    listen 10000 default_server;
+    listen [::]:10000 default_server;
+
+    # listen $HTTP_PORT default_server;
+    # listen [::]:$HTTP_PORT default_server;
 
     root /var/www/html/public;
 
